# BarnaNetLibrary

./: .gitignore  B_BarnaNetCommand.c  B_BarnaNetCommand.h  B_SECRET.md  B_alarm.c  B_alarm.h  B_colorUtil.c  B_colorUtil.h  B_mqtt.c  B_mqtt.h  B_tcpServer.c  B_tcpServer.h  B_time.c  B_time.h  B_wifi.c  B_wifi.h  CMakeLists.txt  Kconfig  Protocol.md  README.md
api/: alarmService.py  explorer.py  inspectTest.py  library.py
api/test/: libraryExplorer.py  testCommandHandling.py
certs/: README.md
utils/: bakeSun.py  bakedSun.txt
